--- a/Dockerfile.neuris
+++ b/Dockerfile.neuris
@@ -1,5 +1,5 @@
 FROM alpine:3.20
-RUN apk add --no-cache fasttext openjdk21-jre gcompat
+RUN apk add --no-cache fasttext gcompat openjdk21-jdk tar
 
 RUN adduser -u 10000 -h /home/languagetool -D languagetool
 USER languagetool
