--- a/Dockerfile.neuris
+++ b/Dockerfile.neuris
@@ -1,5 +1,5 @@
 FROM alpine:3.20
-RUN apk add --no-cache openjdk21-jdk
+RUN apk add --no-cache openjdk21-jre gcompat
 
 RUN adduser -u 10000 -h /home/languagetool -D languagetool
 USER languagetool
@@ -10,7 +10,6 @@ COPY libs/ libs
 COPY META-INF/ META-INF
 COPY org/ org
 COPY languagetool-server.jar .
-COPY lid.176.bin .
 COPY server.properties .
 
 EXPOSE 8181/tcp
