Reduce the number of threads from 10 to 3
RISDEV-9468

--- a/server.properties
+++ b/server.properties
@@ -1,1 +1,5 @@
+# disable suggestions for performance and resources
 suggestionsEnabled=false
+# set to max number of CPUs (limit)
+maxCheckThreads=4
+maxWorkQueueSize=50
