--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
         <dependency-check-maven.pluging.version>12.1.6</dependency-check-maven.pluging.version>
         <flatten.version>1.6.0</flatten.version>
         <sortpom-maven.plugin.version>3.2.1</sortpom-maven.plugin.version>
+        <nimbus-jose-jwt.version>9.37</nimbus-jose-jwt.version>
         <!-- Dependency Versions -->
 
         <!-- #### Start Updated Block -->
@@ -279,6 +280,11 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbus-jose-jwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.lucene-gosen</groupId>
