[pl] a new rule and tiny corrections

--- a/languagetool-rpm-package/pom.xml
+++ b/languagetool-rpm-package/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>5.8</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>languagetool</artifactId>
@@ -654,15 +654,6 @@
                                     </file>
                                     <ruleset>default-ruleset</ruleset>
                                 </entry>
-<!--                                <entry>-->
-<!--                                    <name>-->
-<!--                                        /usr/share/java/${parent.project.name}-${project.version}/libs/wiki/commons-jxpath.jar-->
-<!--                                    </name>-->
-<!--                                    <file>-->
-<!--                                        ../${parent.project.name}-wikipedia/target/${parent.project.camelcase}-wikipedia-${project.version}/${parent.project.camelcase}-wikipedia-${project.version}/libs/commons-jxpath.jar-->
-<!--                                    </file>-->
-<!--                                    <ruleset>default-ruleset</ruleset>-->
-<!--                                </entry>-->
                                 <entry>
                                     <name>
                                         /usr/share/java/${parent.project.name}-${project.version}/libs/commons-lang3.jar
@@ -775,15 +766,6 @@
                                     </file>
                                     <ruleset>default-ruleset</ruleset>
                                 </entry>
-<!--                                <entry>-->
-<!--                                    <name>-->
-<!--                                        /usr/share/java/${parent.project.name}-${project.version}/libs/wiki/jopt-simple.jar-->
-<!--                                    </name>-->
-<!--                                    <file>-->
-<!--                                        ../${parent.project.name}-wikipedia/target/${parent.project.camelcase}-wikipedia-${project.version}/${parent.project.camelcase}-wikipedia-${project.version}/libs/jopt-simple.jar-->
-<!--                                    </file>-->
-<!--                                    <ruleset>default-ruleset</ruleset>-->
-<!--                                </entry>-->
                                 <entry>
                                     <name>/usr/share/java/${parent.project.name}-${project.version}/libs/jsonic.jar
                                     </name>
@@ -818,15 +800,6 @@
                                     </file>
                                     <ruleset>default-ruleset</ruleset>
                                 </entry>
-<!--                                <entry>-->
-<!--                                    <name>-->
-<!--                                        /usr/share/java/${parent.project.name}-${project.version}/libs/wiki/log4j.jar-->
-<!--                                    </name>-->
-<!--                                    <file>-->
-<!--                                        ../${parent.project.name}-wikipedia/target/${parent.project.camelcase}-wikipedia-${project.version}/${parent.project.camelcase}-wikipedia-${project.version}/libs/log4j.jar-->
-<!--                                    </file>-->
-<!--                                    <ruleset>default-ruleset</ruleset>-->
-<!--                                </entry>-->
                                 <entry>
                                     <name>
                                         /usr/share/java/${parent.project.name}-${project.version}/libs/wiki/lucene-analyzers-common.jar
@@ -913,7 +886,8 @@
                                         /usr/share/java/${parent.project.name}-${project.version}/libs/morfologik-speller.jar
                                     </name>
                                     <file>
-                                        ../${parent.project.name}-standalone/target/${parent.project.camelcase}-${project.version}/${parent.project.camelcase}-${project.version}/libs/morfologik-speller.jar
+         
+                                       ../${parent.project.name}-standalone/target/${parent.project.camelcase}-${project.version}/${parent.project.camelcase}-${project.version}/libs/morfologik-speller.jar
                                     </file>
                                     <ruleset>default-ruleset</ruleset>
                                 </entry>
